Bug fixed CLINPORTAL-8006